--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="incomplete-area">
         <p class="title">未完了のTODO</p>
-        <ul>
+        <ul id="incomplete-list">
             <li>
              <div class="list-row">
                 <p class="todo-item">TODOです</p>
@@ -32,7 +32,7 @@
     </div>
     <div class="complete-area ">
         <p class="title">完了のTODO</p>
-        <ul>
+        <ul id="complete-list">
             <li>
              <div  class="list-row">
                 <p class="todo-item">TODOでした</p>
